# my-world

./: .env.example
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/auth/: dependencies.py  router.py  security.py  service.py
backend/core/: config.py  database.py
backend/tests/: test_auth.py
