[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pytest-asyncio>=1.4.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]
