[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pytest-asyncio>=1.4.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]
